--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="orange">#FFA200</color>
     <color name="grey">#EEEEEE</color>
     <color name="colorBackground">#F7F7F7</color>
+    <color name="colorBlack">#000000</color>
 </resources>
