--- a/app/src/main/res/layout/activity_edit_food.xml
+++ b/app/src/main/res/layout/activity_edit_food.xml
@@ -11,18 +11,14 @@
         android:layout_height="wrap_content"
         android:id="@+id/toolbar_edit_food"></android.support.v7.widget.Toolbar>
 
-    <ScrollView
-        android:layout_below="@+id/toolbar_edit_food"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_edit_food"
             android:scrollbars="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/btn_confirm">
+            android:layout_below="@+id/toolbar_edit_food"
+            >
         </android.support.v7.widget.RecyclerView>
-    </ScrollView>
 
 <!--    <RelativeLayout-->
 <!--        android:id="@+id/rl_food"-->
@@ -95,7 +91,7 @@
 <!--    </RelativeLayout>-->
 
     <Button
-        android:id="@+id/btn"
+        android:id="@+id/btn_confirm_edit_food"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:textColor="#ffffff"
@@ -105,6 +101,6 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="57dp"
         android:background="@drawable/button_background"
-        android:text="Add Food" />
+        android:text="Confirm" />
 
 </RelativeLayout>
