--- a/app/src/main/res/layout/add_food.xml
+++ b/app/src/main/res/layout/add_food.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="300dp"
     android:layout_margin="0dp"
@@ -81,10 +82,11 @@
                 android:id="@+id/tv_total_cals"
                 android:layout_below="@+id/rv_list_makanan_choosen"
                 android:textColor="#000000"
-                android:text="10"
+                tools:text="678.4"
                 android:paddingRight="10dp"
+                android:textAlignment="textEnd"
                 android:layout_toLeftOf="@+id/tv_cal2"
-                android:layout_width="wrap_content"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content"/>
             <TextView
                 android:id="@+id/tv_addFood"
