--- a/app/src/main/res/layout/fragment_daily_quest.xml
+++ b/app/src/main/res/layout/fragment_daily_quest.xml
@@ -6,14 +6,11 @@
     tools:context=".DailyQuestFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_marginTop="200dp"
-        android:layout_centerHorizontal="true"
-        android:layout_width="wrap_content"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:text="Daily Quest"
-        android:textColor="@color/colorPrimary"
-        android:layout_height="match_parent" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_daily_quest"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
