--- a/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_leaderboard.xml
@@ -36,26 +36,19 @@
                 android:layout_height="80dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginTop="164dp"
-                android:src="@drawable/ic_leaderboard" />
+                android:layout_marginTop="180dp"
+                android:src="@drawable/gambar_leaderboard" />
 
             <TextView
                 android:id="@+id/tv_nama_customer"
                 android:layout_below="@+id/iv_dp_profile"
-                android:paddingTop="10dp"
+                android:layout_marginTop="20dp"
                 android:gravity="center"
                 android:textSize="52px"
+                android:textColor="@color/colorBlack"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Weekly Leaderboard"/>
-            <TextView
-                android:id="@+id/tv_edit_profile"
-                android:layout_below="@+id/tv_nama_customer"
-                android:gravity="center"
-                android:textSize="36px"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Edit"/>
 
             <ScrollView
                 android:layout_width="match_parent"
@@ -70,36 +63,128 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                    <Button
-                        android:id="@+id/btn1"
-                        android:layout_width="280dp"
-                        android:layout_height="68dp"
-                        android:layout_gravity="center"
-                        android:background="@drawable/top1" />
-                    <Button
-                        android:id="@+id/btn2"
-                        android:layout_width="280dp"
-                        android:layout_height="68dp"
-                        android:layout_gravity="center"
-                        android:background="@drawable/top1"/>
-                    <Button
-                        android:id="@+id/btn3"
-                        android:layout_width="280dp"
-                        android:layout_height="68dp"
-                        android:layout_gravity="center"
-                        android:background="@drawable/top1"/>
-                    <Button
-                        android:id="@+id/btn4"
-                        android:layout_width="280dp"
-                        android:layout_height="68dp"
-                        android:layout_gravity="center"
-                        android:background="@drawable/top1"/>
-                    <Button
-                        android:id="@+id/btn5"
-                        android:layout_width="280dp"
-                        android:layout_height="68dp"
-                        android:layout_gravity="center"
-                        android:background="@drawable/top1"/>
+                    <android.support.v7.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:cardCornerRadius="16dp"
+                        app:cardElevation="6dp"
+                        android:layout_marginLeft="32dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginRight="32dp"
+                        >
+                        <LinearLayout
+                            android:layout_marginLeft="16dp"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginRight="16dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="60dp"
+                            android:orientation="horizontal"
+                            >
+                            <ImageView
+                                android:padding="2dp"
+                                android:layout_width="60dp"
+                                android:layout_height="60dp"
+                                android:src="@drawable/first_winner"
+                                android:layout_marginRight="16dp"
+                                />
+                            <TextView
+                                android:id="@+id/name_1"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                tools:text="Ms. Dewi"
+                                android:textSize="20sp"
+                                android:textColor="@color/colorBlack"
+                                />
+                            <TextView
+                                android:id="@+id/level_leaderboard"
+                                android:text="lv.2"
+                                android:textSize="18sp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+
+                        </LinearLayout>
+
+                    </android.support.v7.widget.CardView>
+                    <android.support.v7.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:cardCornerRadius="16dp"
+                        app:cardElevation="6dp"
+                        android:layout_marginLeft="32dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginRight="32dp"
+                        >
+                        <LinearLayout
+                            android:layout_marginLeft="16dp"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginRight="16dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="60dp"
+                            android:orientation="horizontal"
+                            >
+                            <ImageView
+                                android:padding="2dp"
+                                android:layout_width="60dp"
+                                android:layout_height="60dp"
+                                android:src="@drawable/second_winner"
+                                android:layout_marginRight="16dp"
+                                />
+                            <TextView
+                                android:id="@+id/name_2"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                tools:text="Ms. Dewi"
+                                android:textSize="20sp"
+                                android:layout_gravity="center"
+                                android:textColor="@color/colorBlack"
+                                />
+
+                        </LinearLayout>
+
+                    </android.support.v7.widget.CardView>
+                    <android.support.v7.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:cardCornerRadius="16dp"
+                        app:cardElevation="6dp"
+                        android:layout_marginLeft="32dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginRight="32dp"
+                        >
+                        <LinearLayout
+                            android:layout_marginLeft="16dp"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginRight="16dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="60dp"
+                            android:orientation="horizontal"
+                            >
+                            <ImageView
+                                android:padding="2dp"
+                                android:layout_width="60dp"
+                                android:layout_height="60dp"
+                                android:src="@drawable/third_winner"
+                                android:layout_marginRight="16dp"
+                                />
+                            <TextView
+                                android:id="@+id/name_3"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                tools:text="Ms. Dewi"
+                                android:textSize="20sp"
+                                android:layout_gravity="center"
+                                android:textColor="@color/colorBlack"
+                                />
+
+                        </LinearLayout>
+
+                    </android.support.v7.widget.CardView>
 
                 </LinearLayout>
 
