--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -50,14 +50,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Ms.Dewi Lie"/>
-            <TextView
-                android:id="@+id/tv_edit_profile"
-                android:layout_below="@+id/tv_nama_customer"
-                android:gravity="center"
-                android:textSize="36px"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Edit"/>
 
             <ScrollView
                 android:layout_width="match_parent"
@@ -78,24 +70,24 @@
                         android:layout_height="68dp"
                         android:layout_gravity="center"
                         android:background="@drawable/button_acv" />
-                    <Button
-                        android:id="@+id/btn_notif"
-                        android:layout_width="280dp"
-                        android:layout_height="68dp"
-                        android:layout_gravity="center"
-                        android:background="@drawable/button_notif"/>
-                    <Button
-                        android:id="@+id/btn_setting"
-                        android:layout_width="280dp"
-                        android:layout_height="68dp"
-                        android:layout_gravity="center"
-                        android:background="@drawable/button_setting"/>
+<!--                    <Button-->
+<!--                        android:id="@+id/btn_setting"-->
+<!--                        android:layout_width="280dp"-->
+<!--                        android:layout_height="68dp"-->
+<!--                        android:layout_gravity="center"-->
+<!--                        android:background="@drawable/button_setting"/>-->
                     <Button
                         android:id="@+id/btn_help"
                         android:layout_width="280dp"
                         android:layout_height="68dp"
                         android:layout_gravity="center"
-                        android:background="@drawable/button_help"/>
+                        android:background="@drawable/button_tutorial"/>
+                    <Button
+                        android:id="@+id/btn_logout"
+                        android:layout_width="280dp"
+                        android:layout_height="68dp"
+                        android:layout_gravity="center"
+                        android:background="@drawable/button_logout"/>
                     <Button
                         android:id="@+id/btn_credit"
                         android:layout_width="280dp"
