--- a/app/src/main/res/layout/fragment_quest.xml
+++ b/app/src/main/res/layout/fragment_quest.xml
@@ -1,30 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="#ffffff"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".QuestFragment">
 
     <!-- TODO: Update blank fragment layout -->
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/toolbar_quest"></android.support.v7.widget.Toolbar>
 
         <android.support.design.widget.TabLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#ffffff"
-            app:tabTextColor="#000000"
+            android:layout_below="@+id/toolbar_quest"
             android:id="@+id/tab_quest"
-            app:tabIndicatorHeight="2dp"
-            app:tabMode="fixed"
-            app:tabGravity="fill">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+<!--            android:background="#ffffff"-->
+<!--            app:tabTextColor="#FFA200"-->
+<!--            android:id="@+id/tab_quest"-->
+<!--            app:tabIndicatorHeight="2dp"-->
+<!--            app:tabMode="fixed"-->
+<!--            app:tabGravity="fill">-->
+<!--            <android.support.design.widget.TabItem-->
+<!--                android:id="@+id/tab_daily"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Daily">-->
+<!--            </android.support.design.widget.TabItem>-->
+<!--            <android.support.design.widget.TabItem-->
+<!--                android:id="@+id/tab_main"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Main">-->
+<!--            </android.support.design.widget.TabItem>-->
         </android.support.design.widget.TabLayout>
 
     <android.support.v4.view.ViewPager
+        android:layout_below="@+id/tab_quest"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/vp_quest">
-
+        android:layout_height="fill_parent"
+        android:id="@+id/vp_quest"
+        >
     </android.support.v4.view.ViewPager>
 
-</LinearLayout>
+</RelativeLayout>
