--- a/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_leaderboard.xml
@@ -89,20 +89,62 @@
                                 android:src="@drawable/first_winner"
                                 android:layout_marginRight="16dp"
                                 />
-                            <TextView
-                                android:id="@+id/name_1"
+                            <RelativeLayout
+                                android:id="@+id/rr1"
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                tools:text="Ms. Dewi"
-                                android:textSize="20sp"
-                                android:textColor="@color/colorBlack"
-                                />
-                            <TextView
-                                android:id="@+id/level_leaderboard"
-                                android:text="lv.2"
-                                android:textSize="18sp"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"/>
+                                android:layout_height="wrap_content">
+                                <TextView
+                                    android:id="@+id/name_1"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    tools:text="Ms. Dewi"
+                                    android:textSize="20sp"
+                                    android:textColor="@color/colorBlack"
+                                    />
+                                <TextView
+                                    android:textColor="@color/colorBlack"
+                                    android:layout_below="@+id/name_1"
+                                    android:id="@+id/lv1"
+                                    android:text="Lv. "
+                                    android:textSize="18sp"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"/>
+                                <TextView
+                                    android:layout_toRightOf="@+id/lv1"
+                                    android:layout_below="@+id/name_1"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:id="@+id/level_leaderboard1"
+                                    android:textSize="18sp"
+                                    android:textColor="@color/colorBlack"
+                                    tools:text="0"
+                                    />
+                                <LinearLayout
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="match_parent"
+                                    android:layout_alignRight="@+id/name_1"
+                                    android:orientation="horizontal"
+                                    android:gravity="center_vertical"
+                                    android:layout_marginRight="16dp"
+                                    android:layout_alignParentRight="true"
+                                    >
+                                    <TextView
+                                        android:id="@+id/txt_point"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:gravity="center"
+                                        android:text="180"
+                                        />
+                                    <TextView
+                                        android:gravity="center"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="match_parent"
+                                        android:text=" Points"
+                                        />
+                                </LinearLayout>
+
+                            </RelativeLayout>
+
 
                         </LinearLayout>
 
@@ -133,16 +175,60 @@
                                 android:src="@drawable/second_winner"
                                 android:layout_marginRight="16dp"
                                 />
-                            <TextView
-                                android:id="@+id/name_2"
+                            <RelativeLayout
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                tools:text="Ms. Dewi"
-                                android:textSize="20sp"
-                                android:layout_gravity="center"
-                                android:textColor="@color/colorBlack"
-                                />
-
+                                android:layout_height="wrap_content">
+                                <TextView
+                                    android:id="@+id/name_2"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    tools:text="Ms. Dewi"
+                                    android:textSize="20sp"
+                                    android:layout_gravity="center"
+                                    android:textColor="@color/colorBlack"
+                                    />
+                                <TextView
+                                    android:textColor="@color/colorBlack"
+                                    android:layout_below="@+id/name_2"
+                                    android:id="@+id/lv2"
+                                    android:text="Lv. "
+                                    android:textSize="18sp"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"/>
+                                <TextView
+                                    android:layout_toRightOf="@+id/lv2"
+                                    android:layout_below="@+id/name_2"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:id="@+id/level_leaderboard2"
+                                    android:textSize="18sp"
+                                    android:textColor="@color/colorBlack"
+                                    tools:text="0"
+                                    />
+                                <LinearLayout
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="match_parent"
+                                    android:layout_alignRight="@+id/name_2"
+                                    android:orientation="horizontal"
+                                    android:gravity="center_vertical"
+                                    android:layout_marginRight="16dp"
+                                    android:layout_alignParentRight="true"
+                                    >
+                                    <TextView
+                                        android:id="@+id/txt_point2"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:gravity="center"
+                                        android:text="180"
+                                        />
+                                    <TextView
+                                        android:gravity="center"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="match_parent"
+                                        android:text=" Points"
+                                        />
+                                </LinearLayout>
+                            </RelativeLayout>
                         </LinearLayout>
 
                     </android.support.v7.widget.CardView>
@@ -172,16 +258,60 @@
                                 android:src="@drawable/third_winner"
                                 android:layout_marginRight="16dp"
                                 />
-                            <TextView
-                                android:id="@+id/name_3"
+                            <RelativeLayout
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                tools:text="Ms. Dewi"
-                                android:textSize="20sp"
-                                android:layout_gravity="center"
-                                android:textColor="@color/colorBlack"
-                                />
-
+                                android:layout_height="wrap_content">
+                                <TextView
+                                    android:id="@+id/name_3"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    tools:text="Ms. Dewi"
+                                    android:textSize="20sp"
+                                    android:layout_gravity="center"
+                                    android:textColor="@color/colorBlack"
+                                    />
+                                <TextView
+                                    android:textColor="@color/colorBlack"
+                                    android:layout_below="@+id/name_3"
+                                    android:id="@+id/lv3"
+                                    android:text="Lv. "
+                                    android:textSize="18sp"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"/>
+                                <TextView
+                                    android:layout_toRightOf="@+id/lv3"
+                                    android:layout_below="@+id/name_3"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:id="@+id/level_leaderboard3"
+                                    android:textSize="18sp"
+                                    android:textColor="@color/colorBlack"
+                                    tools:text="0"
+                                    />
+                                <LinearLayout
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="match_parent"
+                                    android:layout_alignRight="@+id/name_3"
+                                    android:orientation="horizontal"
+                                    android:gravity="center_vertical"
+                                    android:layout_marginRight="16dp"
+                                    android:layout_alignParentRight="true"
+                                    >
+                                    <TextView
+                                        android:id="@+id/txt_point3"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:gravity="center"
+                                        android:text="180"
+                                        />
+                                    <TextView
+                                        android:gravity="center"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="match_parent"
+                                        android:text=" Points"
+                                        />
+                                </LinearLayout>
+                            </RelativeLayout>
                         </LinearLayout>
 
                     </android.support.v7.widget.CardView>
