--- a/app/src/main/res/layout/activity_credit_.xml
+++ b/app/src/main/res/layout/activity_credit_.xml
@@ -1,16 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:layout_margin="16dp"
     tools:context=".Credit_Activity">
+
+    <ImageView
+        android:id="@+id/back_button_credit"
+        android:src="@drawable/ic_left_arrow"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="30dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:tint="#0F0F0F"
+        />
     <TextView
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
+        android:fontFamily="@font/montserrat_bold"
+        android:textAlignment="center"
         android:textSize="24sp"
-        android:text="Credit page"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Credit"
+        android:layout_marginBottom="16dp"
+        />
+    <android.support.v7.widget.CardView
+        android:id="@+id/cv_credit"
+        android:layout_width="match_parent"
+        android:layout_height="230dp"
+        android:layout_marginTop="50dp"
+        app:cardElevation="8dp"
+        app:cardCornerRadius="32dp"
+        >
+        <RelativeLayout
+            android:background="@drawable/bg_header_profile"
+            android:id="@+id/rl_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="15dp"
+            >
+            <ImageView
+                android:layout_marginTop="50dp"
+                android:src="@drawable/chip"
+                android:layout_width="80dp"
+                android:layout_height="80dp"/>
+            <TextView
+                android:textSize="28sp"
+                android:layout_alignParentRight="true"
+                android:textColor="#ffffff"
+                android:text="Diabetter"
+                android:fontFamily="@font/montserrat_bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:textSize="24sp"
+                android:textColor="#000000"
+                android:text="000 000 10266"
+                android:fontFamily="@font/montserrat_bold"
+                android:layout_width="wrap_content"
+                android:layout_above="@id/nama_developer"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/nama_developer"
+                android:textSize="24sp"
+                android:textColor="#000000"
+                android:fontFamily="@font/montserrat_bold"
+                android:text="Dewi Lie"
+                android:layout_alignParentBottom="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+    <TextView
+        android:id="@+id/tv_asset"
+        android:textSize="20sp"
+        android:textColor="#000000"
+        android:text="Asset by : freepik.com \n
+                     figma.com"
+        android:fontFamily="@font/montserrat_bold"
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/cv_credit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-
-</RelativeLayout>
+</LinearLayout>
