--- a/app/src/main/res/layout/layout_edit_food.xml
+++ b/app/src/main/res/layout/layout_edit_food.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="8dp"
@@ -16,83 +16,99 @@
         app:cardCornerRadius="12dp"
         app:cardElevation="2dp">
         <RelativeLayout
-            android:id="@+id/rl_food"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp">
-            <TextView
-                android:id="@+id/tv_food_choosen"
-                android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <RelativeLayout
+                android:id="@+id/rl_food"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:textSize="18dp"
-                android:fontFamily="@font/montserrat_regular"
-                android:textColor="#000000"
-                android:text="Food Name" />
-            <TextView
-                android:id="@+id/tv_calories_choosen"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="0dp"
-                android:layout_toLeftOf="@+id/tvCalGram"
-                android:fontFamily="@font/montserrat_regular"
-                android:layout_marginRight="5dp"
-                android:layout_centerHorizontal="true"
-                android:text="10"
-                android:textColor="#000000"
-                android:textSize="18dp" />
-            <TextView
-                android:id="@+id/tvCalGram"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:fontFamily="@font/montserrat_regular"
-                android:textSize="18dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="8dp">
+                <TextView
+                    android:id="@+id/tv_food_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:textSize="18dp"
+                    android:fontFamily="@font/montserrat_regular"
+                    android:textColor="#000000"
+                    tools:text="Food Name" />
+                <TextView
+                    android:id="@+id/tv_total_calories"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="0dp"
+                    android:layout_toLeftOf="@+id/tvCalGram"
+                    android:fontFamily="@font/montserrat_regular"
+                    android:layout_marginRight="5dp"
+                    android:layout_centerHorizontal="true"
+                    tools:text="10"
+                    android:textColor="#000000"
+                    android:textSize="18dp" />
+                <TextView
+                    android:id="@+id/tvCalGram"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:fontFamily="@font/montserrat_regular"
+                    android:textSize="18dp"
+                    android:layout_marginRight="50dp"
+                    android:textColor="#000000"
+                    android:text="Cal"
+                    />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/rl_gram"
+                android:layout_below="@+id/rl_food"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:gravity="center_vertical"
+                android:background="@drawable/base_list_food"
+
+                android:layout_marginLeft="5dp"
                 android:layout_marginRight="50dp"
-                android:textColor="#000000"
-                android:text="Cal/Gram"
+                android:paddingLeft="25dp"
+                android:paddingRight="25dp"
+                >
+
+                <TextView
+                    android:id="@+id/tv_serving_calories"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    tools:text="10" />
+                <TextView
+                    android:id="@+id/text_view_calories"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignTop="@+id/text_view_food_name"
+                    android:layout_gravity="center"
+                    android:text="Gram" />
+                <View
+                    android:layout_width="2dp"
+                    android:layout_height="20dp"
+                    android:background="@color/grey"
+                    android:layout_toLeftOf="@+id/text_view_calories"
+                    android:layout_marginRight="16dp"
+
+                    />
+            </RelativeLayout>
+            <Button
+                android:id="@+id/btn_delete"
+                android:layout_marginTop="30dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/ic_delete"
+                android:layout_marginRight="16dp"
+                android:layout_alignParentRight="true"
                 />
         </RelativeLayout>
 
-        <RelativeLayout
-            android:layout_below="@+id/rl_food"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_marginTop="30dp"
-            android:gravity="center_vertical"
-            android:background="@drawable/base_list_food"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="50dp"
-            android:paddingLeft="25dp"
-            android:paddingRight="25dp"
-            >
 
-            <TextView
-                android:id="@+id/tv_food_weight"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Insert food's weight" />
-            <TextView
-                android:id="@+id/text_view_calories"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/text_view_food_name"
-                android:layout_gravity="center"
-                android:gravity="right"
-                android:text="Gram" />
-        </RelativeLayout>
 
-        <Button
-            android:layout_marginTop="30dp"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@drawable/ic_delete"
-            android:layout_gravity="right"
-            />
 
 
     </android.support.v7.widget.CardView>
